# DrawMeMaybe

./: .gitignore  Aufgabenteilung.txt  README-ai-image.md  README-tinydb.md  README-webdev.md  README.md  db.json  draw_Line_support.py  draw_svg_lift_draw.py  durchlauf.sh  package-lock.json  paths.json  requirements-ai-image.txt  requirements.txt  requirements_to_svg.txt  run_pipeline.sh  run_with_ollama_and_sd.sh  server_start.sh  start_backend.sh  test_dalle.py  test_gemini_image.py
Doks/: Aufgabenteilung.txt
Doks/Plakate/: readme.txt
Konfigs/: drawMeMaybe.conf  readme.txt
Webseite/: README.md
ai_image/: __init__.py  end_to_end.py
ai_image/agent/: __init__.py  caricature_agent.py
ai_image/models/: (later) sd_client.py  llava_test.py  qwen2_vl_test.py  vision_blip.py  vision_llm.py
ai_image/scripts/: demo_caricature_cli.py
ai_image/sd_pipeline/: run_agent_only.py  testens.py
backend/: db.py  main.py
backend/ai_image/: config.py
backend/ai_image/agent/: caricature_agent.py
backend/ai_image/models/: __init__.py
backend/ai_image/sd_pipeline/: agent_output.json  run_agent_only.py  run_gemini_only.py  run_sd_only.py
backend/image_to_svg/: to_svg.py
backend/tinydb/: db.json  db.py
backend/tinydb/data/: db.json
draw_files/: draw_Line_direct.py  draw_svg_line.py  draw_svg_line_oriented.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/router/: index.js
frontend/src/views/: AboutView.vue  CameraView.vue  ChatView.vue  ConsentView.vue  HomeView.vue  ScreensaverView.vue  StatusView.vue
frontend/ui/: app.py  ui_camera.py  ui_chat.py  ui_consent.py  ui_screensaver.py
frontend/ui/camera_min/: __init__.py  index.html  testcam.html
frontend/ui/utils/: styles.py
ros2_ws/: Notizen  paths.json  start_robot.sh
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/my_sample_pkg_cpp/: CMakeLists.txt  CMakeLists.txt.save
ros2_ws/src/my_sample_pkg_cpp/src/: eingener_frame.cpp  eingener_frame_svg.cpp  haus_des_nikolaus.cpp  move_moveit.cpp  moveit_paint_svg.cpp
ros2_ws/src/my_sample_pkg_python/: package.xml  setup.cfg  setup.py
sd_pipeline/: testens.py
src/: camtracker.py  dif.py  facedetection.py  testens.py
src/assets/: to_svg.py
(+363 files in other folders)
